--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
-        "rap2hpoutre/laravel-log-viewer": "^1.7"
+        "livewire/livewire": "^2.4",
+        "rap2hpoutre/laravel-log-viewer": "^1.7",
+        "spatie/laravel-sluggable": "^2.6"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
