--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,13 @@
         "spatie/laravel-sluggable": "^2.6"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
-        "spatie/laravel-ray": "^1.17",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.3",
         "phpunit/phpunit": "^8.5.8|^9.3.3",
+        "spatie/laravel-ray": "^1.17",
         "sven/artisan-view": "^3.4"
     },
     "config": {
