--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "goldspecdigital/laravel-eloquent-uuid": "^7.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "intervention/image": "^2.5",
+        "jamesbhatta/app-settings": "9999999-dev",
         "jantinnerezo/livewire-alert": "^2.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
