--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/ui": "^2.4",
         "livewire/livewire": "^2.4",
         "rap2hpoutre/laravel-log-viewer": "^1.7",
+        "spatie/laravel-permission": "^4.0",
         "spatie/laravel-sluggable": "^2.6"
     },
     "require-dev": {
