--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "intervention/image": "^2.5",
         "jamesbhatta/app-settings": "9999999-dev",
-        "jantinnerezo/livewire-alert": "2.1.8",
+        "jantinnerezo/livewire-alert": "^2.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
